--- a/www/styles/styles.css
+++ b/www/styles/styles.css
@@ -738,11 +738,11 @@ a:visited {
 }
 
 .card-img-1 {
-  background-image: url(../images/green-chameleon-s9CC2SKySJM-unsplash.jpg);
+  background-image: url(../images/aktuellt-1.jpg);
 }
 
 .card-img-2 {
-  background-image: url(../images/christina-wocintechchat-com-faEfWCdOKIg-unsplash.jpg);
+  background-image: url(../images/aktuellt-2.jpg);
 }
 
 .card-img-3 {
