--- a/www/styles/styles.css
+++ b/www/styles/styles.css
@@ -254,6 +254,7 @@ nav li {
   cursor: pointer;
   display: inline-block;
   position: relative;
+  padding: 1rem;
 }
 
 nav li,
@@ -278,7 +279,7 @@ nav > div > ul > li:hover {
 }
 
 nav li > ul {
-  background-color: #FFFF;
+  background-color: #666A73;
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
           box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
   left: -0.04rem;
