--- a/www/styles/styles.scss
+++ b/www/styles/styles.scss
@@ -244,6 +244,7 @@ nav {
         cursor: pointer;
         display: inline-block;
         position: relative;
+        padding: 1rem;
     }
     li,
     #main-menu a,
@@ -263,7 +264,7 @@ nav {
         background-color: $baseColor-lighter;
     }
     li>ul {
-        background-color: $backgroundColor;
+        background-color: $baseColor;
         box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
         left: -0.04rem;
         opacity: 1;
