--- a/www/styles/styles.css
+++ b/www/styles/styles.css
@@ -1000,7 +1000,8 @@ a:visited {
 /*** VERKSAMHETSOMRADEN END ***/
 /***  FOOTER ***/
 footer {
-  background-color: #d3d3d3;
+  background-color: #666A73;
+  color: white;
 }
 
 .footer-content {
@@ -1011,16 +1012,15 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-flow: wrap;
-      flex-flow: wrap;
   margin: 1rem auto;
   font-size: 15px;
   line-height: 2;
+  max-width: 1280px;
 }
 
 .footer-item {
-  padding-right: 6rem;
-  margin: 2rem;
+  padding-right: 3rem;
+  margin: 1rem;
 }
 
 /***  FOOTER END ***/
@@ -1315,6 +1315,14 @@ p {
   margin-bottom: 1rem;
 }
 
+a {
+  color: #000000;
+}
+
+a :hover {
+  text-decoration: underline;
+}
+
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
   background-color: #45a049;
@@ -1496,6 +1504,10 @@ input[type=submit]:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+#calendar :hover {
+  cursor: pointer;
 }
 
 .calendar-title {
